[package]
name = "rng_animate"
version = "9000.1.0"
description = "a random animation in the terminal"
license = "MIT"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
ctrlc = "3.1.7"
rand = "0.7.3"
term_size = "0.3.2"
termion = "1.5.5"
